--- a/styles/css/custom/custom.css
+++ b/styles/css/custom/custom.css
@@ -35,7 +35,7 @@ a:hover {
 .btn,
 .mx-button {
   border-radius: 45px;
-  padding: 14px 24px;
+  padding: 7px 15px;
   font-weight: 500;
   text-transform: capitalize;
 }
@@ -109,13 +109,14 @@ a:hover {
   /* Table footer */
 }
 .mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr {
-  background-color: rgba(0, 0, 0, 0.17);
+  /* Styles here */
 }
 .mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr td {
+  /* Styles here */
   /* Text without spaces */
 }
-.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr:nth-child(odd) td {
-  background-color: rgba(228, 228, 228, 0.17);
+.mx-datagrid .mx-datagrid-body-table .mx-datagrid-body tr:nth-child(odd) {
+  background-color: transparent;
 }
 
 .datagrid-striped.mx-datagrid .mx-datagrid-body-table {
@@ -383,6 +384,10 @@ textarea.form-control {
   /* Styles here */
 }
 
+.mx-tooltip .dijitTooltipContainer {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 /* Default Mendix Window Modal */
 .mx-window.mx-window-view .mx-window-body > .mx-dataview > .mx-dataview-content,
 .mx-window.mx-window-view .mx-window-body > .mx-placeholder > .mx-dataview > .mx-dataview-content {
@@ -563,6 +568,12 @@ textarea.form-control {
 
 .tab-lined.mx-tabcontainer .mx-tabcontainer-tabs {
   /* Styles here */
+}
+.tab-lined.mx-tabcontainer .mx-tabcontainer-tabs li > a:hover, .tab-lined.mx-tabcontainer .mx-tabcontainer-tabs li > a:focus {
+  color: #ffcb00;
+}
+.tab-lined.mx-tabcontainer .mx-tabcontainer-tabs li.active > a, .tab-lined.mx-tabcontainer .mx-tabcontainer-tabs li.active > a:hover, .tab-lined.mx-tabcontainer .mx-tabcontainer-tabs li.active > a:focus {
+  color: #ffcb00;
 }
 
 .tab-justified.mx-tabcontainer .mx-tabcontainer-tabs {
@@ -1345,7 +1356,7 @@ body[dir="ltr"] .mx-header {
 }
 
 .profilecard-subtitle {
-  /* Styles here */
+  color: #d4d4d4;
 }
 
 .pageheader .profilecard {
