--- a/styles/sass/custom/buildingblocks/_profilecard.scss
+++ b/styles/sass/custom/buildingblocks/_profilecard.scss
@@ -28,7 +28,7 @@
 	/* Styles here */
 }
 .profilecard-subtitle {
-	/* Styles here */
+	color: #d4d4d4;
 }
 .pageheader .profilecard {
 	/* Styles here */
