--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -1,3 +1,52 @@
+@charset "UTF-8";
+/*
+██████╗  █████╗ ███████╗██╗ ██████╗
+██╔══██╗██╔══██╗██╔════╝██║██╔════╝
+██████╔╝███████║███████╗██║██║     
+██╔══██╗██╔══██║╚════██║██║██║     
+██████╔╝██║  ██║███████║██║╚██████╗
+╚═════╝ ╚═╝  ╚═╝╚══════╝╚═╝ ╚═════╝
+*/
+/*
+ █████╗ ██████╗ ██╗   ██╗ █████╗ ███╗   ██╗ ██████╗███████╗██████╗ 
+██╔══██╗██╔══██╗██║   ██║██╔══██╗████╗  ██║██╔════╝██╔════╝██╔══██╗
+███████║██║  ██║██║   ██║███████║██╔██╗ ██║██║     █████╗  ██║  ██║
+██╔══██║██║  ██║╚██╗ ██╔╝██╔══██║██║╚██╗██║██║     ██╔══╝  ██║  ██║
+██║  ██║██████╔╝ ╚████╔╝ ██║  ██║██║ ╚████║╚██████╗███████╗██████╔╝
+╚═╝  ╚═╝╚═════╝   ╚═══╝  ╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝╚══════╝╚═════╝ 
+*/
+/*
+███████╗██╗  ██╗██████╗ ███████╗██████╗ ████████╗
+██╔════╝╚██╗██╔╝██╔══██╗██╔════╝██╔══██╗╚══██╔══╝
+█████╗   ╚███╔╝ ██████╔╝█████╗  ██████╔╝   ██║   
+██╔══╝   ██╔██╗ ██╔═══╝ ██╔══╝  ██╔══██╗   ██║   
+███████╗██╔╝ ██╗██║     ███████╗██║  ██║   ██║   
+╚══════╝╚═╝  ╚═╝╚═╝     ╚══════╝╚═╝  ╚═╝   ╚═╝   
+*/
+/*
+██████╗  █████╗ ███████╗██╗ ██████╗
+██╔══██╗██╔══██╗██╔════╝██║██╔════╝
+██████╔╝███████║███████╗██║██║     
+██╔══██╗██╔══██║╚════██║██║██║     
+██████╔╝██║  ██║███████║██║╚██████╗
+╚═════╝ ╚═╝  ╚═╝╚══════╝╚═╝ ╚═════╝
+*/
+/*
+ █████╗ ██████╗ ██╗   ██╗ █████╗ ███╗   ██╗ ██████╗███████╗██████╗ 
+██╔══██╗██╔══██╗██║   ██║██╔══██╗████╗  ██║██╔════╝██╔════╝██╔══██╗
+███████║██║  ██║██║   ██║███████║██╔██╗ ██║██║     █████╗  ██║  ██║
+██╔══██║██║  ██║╚██╗ ██╔╝██╔══██║██║╚██╗██║██║     ██╔══╝  ██║  ██║
+██║  ██║██████╔╝ ╚████╔╝ ██║  ██║██║ ╚████║╚██████╗███████╗██████╔╝
+╚═╝  ╚═╝╚═════╝   ╚═══╝  ╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝╚══════╝╚═════╝ 
+*/
+/*
+███████╗██╗  ██╗██████╗ ███████╗██████╗ ████████╗
+██╔════╝╚██╗██╔╝██╔══██╗██╔════╝██╔══██╗╚══██╔══╝
+█████╗   ╚███╔╝ ██████╔╝█████╗  ██████╔╝   ██║   
+██╔══╝   ██╔██╗ ██╔═══╝ ██╔══╝  ██╔══██╗   ██║   
+███████╗██╔╝ ██╗██║     ███████╗██║  ██║   ██║   
+╚══════╝╚═╝  ╚═╝╚═╝     ╚══════╝╚═╝  ╚═╝   ╚═╝   
+*/
 @media (max-width: 767px) {
   .mx-grid,
   .mx-tabcontainer,
@@ -197,7 +246,7 @@ div[tabindex] {
   display: block;
   padding: 7px 8px;
   width: 100%;
-  height: 33px;
+  height: 35px;
   border: 1px solid rgba(221, 221, 221, 0.41);
   border-radius: 4px;
   background-color: rgba(115, 115, 115, 0.54);
@@ -271,7 +320,7 @@ textarea.form-control, textarea.readonly-input {
   cursor: pointer;
 }
 .mx-fileinput .mx-wrapped-form .mx-fileinput-upload-button:hover {
-  background-color: #DDD;
+  background-color: #DDDDDD;
 }
 
 /* ==========================================================================
@@ -333,7 +382,7 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .background-default {
-  background-color: #DDD !important;
+  background-color: #DDDDDD !important;
 }
 
 .background-default-darker {
@@ -502,11 +551,10 @@ textarea.form-control, textarea.readonly-input {
   border-radius: 4px;
   box-shadow: none;
   padding: 8px 14px;
-  background-color: #DDD;
+  background-color: #DDDDDD;
   color: #000;
   text-shadow: none;
   font-size: 12px;
-  text-transform: capitalize;
   line-height: 1.42857;
 }
 .btn:hover, .btn:focus, .btn:active,
@@ -538,8 +586,8 @@ textarea.form-control, textarea.readonly-input {
 }
 
 .btn-default {
-  border-color: #DDD;
-  background-color: #DDD;
+  border-color: #DDDDDD;
+  background-color: #DDDDDD;
   color: #000;
 }
 .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle {
@@ -551,16 +599,16 @@ textarea.form-control, textarea.readonly-input {
   background-image: none;
 }
 .btn-default.disabled, .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled:active, .btn-default.disabled.active, .btn-default[disabled], .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled]:active, .btn-default[disabled].active, fieldset[disabled] .btn-default, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default:active, fieldset[disabled] .btn-default.active {
-  border-color: #DDD;
-  background-color: #DDD;
+  border-color: #DDDDDD;
+  background-color: #DDDDDD;
 }
 .btn-default.btn-bordered {
   background-color: transparent;
-  color: #DDD;
+  color: #DDDDDD;
 }
 .btn-default.btn-bordered:hover, .btn-default.btn-bordered:focus, .btn-default.btn-bordered:active, .btn-default.btn-bordered.active, .open > .btn-default.btn-bordered.dropdown-toggle {
-  background-color: #DDD;
-  border-color: #DDD;
+  background-color: #DDDDDD;
+  border-color: #DDDDDD;
   color: #000;
 }
 
@@ -730,33 +778,6 @@ textarea.form-control, textarea.readonly-input {
   color: #FFF;
 }
 
-.btn-white {
-  border-color: #FFF;
-  background-color: #FFF;
-  color: #000;
-}
-.btn-white:hover, .btn-white:focus, .btn-white:active, .btn-white.active, .open > .btn-white.dropdown-toggle {
-  border-color: #e6e6e6;
-  background-color: #e6e6e6;
-  color: #000;
-}
-.btn-white:active, .btn-white.active, .open > .btn-white.dropdown-toggle {
-  background-image: none;
-}
-.btn-white.disabled, .btn-white.disabled:hover, .btn-white.disabled:focus, .btn-white.disabled:active, .btn-white.disabled.active, .btn-white[disabled], .btn-white[disabled]:hover, .btn-white[disabled]:focus, .btn-white[disabled]:active, .btn-white[disabled].active, fieldset[disabled] .btn-white, fieldset[disabled] .btn-white:hover, fieldset[disabled] .btn-white:focus, fieldset[disabled] .btn-white:active, fieldset[disabled] .btn-white.active {
-  border-color: #FFF;
-  background-color: #FFF;
-}
-.btn-white.btn-bordered {
-  background-color: transparent;
-  color: #FFF;
-}
-.btn-white.btn-bordered:hover, .btn-white.btn-bordered:focus, .btn-white.btn-bordered:active, .btn-white.btn-bordered.active, .open > .btn-white.btn-bordered.dropdown-toggle {
-  background-color: #FFF;
-  border-color: #FFF;
-  color: #000;
-}
-
 .btn-link {
   border: 0;
   background-color: transparent;
@@ -843,7 +864,7 @@ textarea.form-control, textarea.readonly-input {
 /* ==========================================================================
    Grid
 
-   Default Mendix Grid
+   Default Mendix Grid (used for Mendix Datagrid)
 ========================================================================== */
 .mx-grid {
   border-radius: 0;
@@ -1738,7 +1759,7 @@ img.img-thumbnail,
   padding: 4px;
   line-height: 1.42857;
   background-color: #fff;
-  border: 1px solid #DDD;
+  border: 1px solid #DDDDDD;
 }
 
 img.img-circle,
@@ -1773,8 +1794,8 @@ img.img-auto,
 }
 
 .label-default {
-  background-color: #DDD;
-  color: #000;
+  background-color: #DDDDDD;
+  color: #FFF;
 }
 
 .label-primary {
@@ -3007,6 +3028,233 @@ h1, h2, h3, h4, h5, h6,
 * 
 */
 /* ==========================================================================
+   Special styles for presenting Page Template Dashboard
+========================================================================== */
+.page-dashboard {
+  background-color: transparent;
+}
+.page-dashboard .chartjs-node {
+  margin-top: 30px;
+}
+
+.page-dashboard-default .card {
+  min-height: 345px;
+}
+
+.page-dashboard-mytasks .card {
+  min-height: 320px;
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Form
+========================================================================== */
+.page-form {
+  /* Styles here */
+}
+
+.page-form-default {
+  /* Styles here */
+}
+
+.page-form-imagemap {
+  /* Styles here */
+}
+
+.page-form-tabs {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Master Detail
+========================================================================== */
+.page-masterdetail {
+  /* Styles here */
+}
+
+.page-masterdetail-basic {
+  /* Styles here */
+}
+
+.page-masterdetail-big {
+  /* Styles here */
+}
+
+.page-masterdetail-imagemap {
+  /* Styles here */
+}
+
+.page-masterdetail-multilevel {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Tabs
+========================================================================== */
+.page-tabs {
+  /* Styles here */
+}
+.page-tabs .tabsfullwidth {
+  background-color: transparent;
+}
+
+.page-tabs-default {
+  /* Styles here */
+}
+
+.page-tabs-fullwidth {
+  /* Styles here */
+}
+.page-tabs-fullwidth .pageheader.pageheader-fullwidth {
+  border-style: none;
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Website
+========================================================================== */
+.page-website {
+  /* Styles here */
+}
+
+.page-website-actions {
+  /* Styles here */
+}
+
+.page-website-items {
+  /* Styles here */
+}
+
+.page-website-items-detail {
+  /* Styles here */
+}
+
+.page-website-presentation {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Wizard
+========================================================================== */
+.page-wizard {
+  /* Styles here */
+}
+
+.page-wizard-default {
+  /* Styles here */
+}
+
+.page-wizard-titlecentered {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Phone
+========================================================================== */
+.phone-page-dashboard {
+  background-color: transparent;
+}
+
+.phone-page-dashboard-default {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Phone Form
+========================================================================== */
+.phone-page-form {
+  /* Styles here */
+}
+
+.phone-page-form-default {
+  /* Styles here */
+}
+
+.phone-page-form-edit {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Phone Listview
+========================================================================== */
+.phone-page-listview {
+  /* Styles here */
+}
+
+.phone-page-listview-default {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Phone Wizard
+========================================================================== */
+.phone-page-wizard {
+  /* Styles here */
+}
+
+.phone-page-wizard-default {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Tablet Dashboard
+========================================================================== */
+.tablet-page-dashboard {
+  background-color: transparent;
+}
+
+.tablet-page-dashboard-default {
+  /* Styles here */
+}
+
+.tablet-page-dashboard-big {
+  /* Styles here */
+}
+
+.tablet-page-dashboard-mytasks {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Tablet Form
+========================================================================== */
+.tablet-page-form {
+  /* Styles here */
+}
+
+.tablet-page-form-default {
+  /* Styles here */
+}
+
+.tablet-page-form-edit {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Tablet Master Detail
+========================================================================== */
+.tablet-page-masterdetail {
+  /* Styles here */
+}
+
+.tablet-page-masterdetail-default {
+  /* Styles here */
+}
+
+.tablet-page-masterdetail-leftright {
+  /* Styles here */
+}
+
+/* ==========================================================================
+   Special styles for presenting Page Template Tablet Wizard
+========================================================================== */
+.tablet-page-wizard {
+  /* Styles here */
+}
+
+.tablet-page-wizard-default {
+  /* Styles here */
+}
+
+/* ==========================================================================
    Action Block
 ========================================================================== */
 .actionblock {
@@ -3208,7 +3456,7 @@ h1, h2, h3, h4, h5, h6,
 /* ==========================================================================
    Form
 
-   To extend the default form
+   To extend the default Bootstrap form
 ========================================================================== */
 .form-group .control-label {
   margin-bottom: 5px;
@@ -3294,6 +3542,10 @@ h1, h2, h3, h4, h5, h6,
   background-color: #eee !important;
 }
 
+.multilevel-title label {
+  font-weight: bold;
+}
+
 .multilevel-subtitle {
   color: #555;
 }
@@ -3321,9 +3573,9 @@ h1, h2, h3, h4, h5, h6,
   border-style: none;
 }
 .multilevel-grid .mx-datagrid-body-table {
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-left: 1px solid rgba(221, 221, 221, 0.41);
+  border-right: 1px solid rgba(221, 221, 221, 0.41);
+  border-bottom: 1px solid rgba(221, 221, 221, 0.41);
 }
 .multilevel-grid .mx-datagrid-body-table .mx-datagrid-body tr td {
   border-color: #eee;
@@ -4227,7 +4479,7 @@ body[dir="ltr"] .mx-header-right {
 /* ==========================================================================
    Navbar Brand
 
-   Used to style your app brand and logo
+   For your company, product, or project name
 ========================================================================== */
 .navbar-brand {
   display: block;
@@ -4241,7 +4493,7 @@ body[dir="ltr"] .mx-header-right {
 }
 .navbar-brand a {
   font-size: 20px;
-  color: #000;
+  color: #FFF;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
