--- a/styles/sass/custom/components/_inputs.scss
+++ b/styles/sass/custom/components/_inputs.scss
@@ -2,31 +2,38 @@
    Inputs
 ========================================================================== */
 .form-control {
-			/* Styles here */
+	&[readonly] {
+        color: #FFF;
+        background-color: $brand-inverse;
+    }
+    option {
+        color: #FFF;
+        background-color: $brand-inverse;
+    }
 }
 textarea.form-control {
-		/* Styles here */
+	/* Styles here */
 }
 .form-control:focus {
 	/* Styles here */
 }
 // Not editable textarea, textarea will be rendered as a label
 .mx-textarea label {
-		/* Styles here */
+	/* Styles here */
 }
 // Input and textarea get properly aligned
 .form-group div[class*='textBox'] > label,
 .form-group div[class*='textArea'] > label {
-			/* Styles here */
+		/* Styles here */
 }
 // Inputs Readonly
 .readonly-input {
 	label {
-			/* Styles here */
+		/* Styles here */
 	}
 }
 .readonly-input-alert label {
-		/* Styles here */
+	/* Styles here */
 }
 .disabled-form p {
 	background-color: rgba(115, 115, 115, 0.54) !important;
