--- a/styles/sass/custom/pagetemplates/responsive/_page-dashboard.scss
+++ b/styles/sass/custom/pagetemplates/responsive/_page-dashboard.scss
@@ -2,23 +2,23 @@
    Special styles for presenting Page Template Dashboard
 ========================================================================== */
 .page-dashboard {
-	background-color: $color-layout-bg-secondary;
+	background-color: $bg-color-secondary;
 	background-color: #eff4f7;
 	background-image: url(../../../img/background.jpg);
 	background-size: cover;
 	background-position: top center;
 	.chartjs-node {
-		margin-top: 30px;
+		/* Styles Here */
 	}
 }
 .page-dashboard-default {
 	.card {
-		min-height: 345px;
+		/* Styles Here */
 	}
 }
 .page-dashboard-mytasks {
 	.card {
-		min-height: 320px;
+		/* Styles Here */
 	}
 }
 .page-dashboard-actions {
