--- a/styles/sass/custom/pagetemplates/responsive/_page-tabs.scss
+++ b/styles/sass/custom/pagetemplates/responsive/_page-tabs.scss
@@ -7,14 +7,14 @@
 		padding-bottom: 20px;
 	}
 	.tabsfullwidth {
-		background-color: $color-layout-bg-secondary;
+		/* Styles Here */
 	}
 }
 .page-tabs-default {
-
+	/* Styles Here */
 }
 .page-tabs-fullwidth {
 	.pageheader.pageheader-fullwidth {
-		border-style: none;
+		/* Styles Here */
 	}
 }
