--- a/styles/sass/custom/pagetemplates/tablet/_tablet-page-dashboard.scss
+++ b/styles/sass/custom/pagetemplates/tablet/_tablet-page-dashboard.scss
@@ -2,7 +2,7 @@
    Special styles for presenting Page Template Tablet Dashboard
 ========================================================================== */
 .tablet-page-dashboard {
-	background-color: $color-layout-bg-secondary;
+	/* Styles Here */
 }
 .tablet-page-dashboard-default {
 	/* Styles here */
