Update to latest framework-lib

--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -143,6 +143,10 @@
 
    Default settings
 ========================================================================== */
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 100;
@@ -150,6 +154,7 @@ body {
   font-size: 14px;
   line-height: 1.42857;
   background-color: transparent;
+  min-height: 100%;
 }
 
 a {
