--- a/styles/sass/custom/components/_navigation.scss
+++ b/styles/sass/custom/components/_navigation.scss
@@ -156,10 +156,10 @@
 			&:hover a,
 			&:focus a,
 			&.active a {
-				/* Styles here */
+				color: $brand-primary;
 			}
 			&.active a {
-				/* Styles here */
+				color: $brand-primary;
             }
 		}
 	}
