--- a/styles/sass/custom/buildingblocks/_card.scss
+++ b/styles/sass/custom/buildingblocks/_card.scss
@@ -19,12 +19,6 @@
 		background-color: none;
 		background:linear-gradient(to bottom, rgba(218, 218, 218, 0.38) 10%, rgba(255, 255, 255, 0.11) 62%, rgba(255, 255, 255, 0.34) 117%);
 	}
-	h2 {
-		text-align: left;
-		font-weight: 100;
-		color: $color-text-white;
-		margin-left: 30px;
-	}
 }
 .card-header-action {
 	/* Title + button + border below title and button */
@@ -39,7 +33,9 @@
 	/* Styles here */
 }
 .card-title {
-	color: $color-text-white;
+	text-align: left;
+	font-weight: 100;
+	color: #FFF;
 }
 .card-subtitle {
 	font-size: 16px;
