--- a/styles/sass/custom/_custom-variables.scss
+++ b/styles/sass/custom/_custom-variables.scss
@@ -62,8 +62,9 @@ $link-hover-color:                      darken($link-color, 15%);
 //== Typography
 //## Change your font family, weight, line-height, headings and more (used in components/typography)
 
-// Google Fonts - Open Sans
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+// Font Family Import / Google Fonts - Open Sans
+$font-family-import:                    'https://fonts.googleapis.com/css?family=Open+Sans';
+@import url($font-family-import);
 
 // Font Family / False = fallback from Bootstrap (Helvetica Neue)
 $font-family-base:                      'Open Sans', sans-serif;//"Helvetica Neue", Helvetica, Arial, sans-serif;
