--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -2271,7 +2271,7 @@ img.img-auto,
   width: 50%;
 }
 .mx-menubar.menubar-col-4 ul.mx-menubar-list li.mx-menubar-item {
-  width: 33%;
+  width: 33.33333333%;
 }
 .mx-menubar.menubar-col-3 ul.mx-menubar-list li.mx-menubar-item {
   width: 25%;
@@ -2316,6 +2316,11 @@ img.img-auto,
 .mx-menubar-vertical ul.mx-menubar-list li.mx-menubar-item a.active {
   color: #FFF;
   background-color: #ECC016;
+}
+
+/* Horizontal variation specifics */
+.mx-menubar-horizontal ul.mx-menubar-list li.mx-menubar-item {
+  width: auto;
 }
 
 /* ==========================================================================
