--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -3989,12 +3989,15 @@ h1, h2, h3, h4, h5, h6,
 .profile-tablet .mx-listview .mx-listview-searchbar {
   padding: 10px;
   margin-bottom: 0;
+  position: relative;
   /* Reset Search Button */
   /* Search Field */
 }
 .profile-phone .mx-listview .mx-listview-searchbar button,
 .profile-tablet .mx-listview .mx-listview-searchbar button {
-  display: none;
+  position: absolute;
+  right: 10px;
+  background: none;
 }
 .profile-phone .mx-listview .mx-listview-searchbar .mx-listview-search-input input,
 .profile-tablet .mx-listview .mx-listview-searchbar .mx-listview-search-input input {
@@ -4371,7 +4374,7 @@ body[dir="ltr"] .mx-header-right {
 ========================================================================== */
 .region-topbar {
   min-height: 80px;
-  border-bottom: 1px solid rgba(221, 221, 221, 0.41);
+  border-bottom: 1px solid none;
   background-color: #ffcb00;
 }
 .region-topbar > .mx-layoutcontainer-wrapper {
