--- a/styles/sass/custom/_custom-variables.scss
+++ b/styles/sass/custom/_custom-variables.scss
@@ -20,6 +20,9 @@ $brand-success:                         #8CC152;
 $brand-warning:                         #F6BB42;
 $brand-danger:                          #D9534F;
 
+$brand-logo:                            false;
+$brand-logo-height:                     40px;
+$brand-logo-width:                      40px; // Only used for CSS brand logo
 
 //== Step 2: UI Customization
 
