--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @media (max-width: 767px) {
   .mx-grid,
   .mx-tabcontainer,
@@ -265,9 +266,6 @@ textarea.form-control {
   }
 }
 
-/* ==========================================================================
-   Inputs Readonly
-========================================================================== */
 /* ==========================================================================
    Inputs File Upload
 ========================================================================== */
@@ -2972,30 +2970,6 @@ h1, h2, h3, h4, h5, h6,
   color: rgba(255, 255, 255, 0.3);
 }
 
-/*
-* Mendix Documentation
-* Special styles for presenting components
-*/
-.mx-appswitcher-button-placeholder,
-.mx-profilemenu-button-placeholder {
-  display: inline-block;
-}
-.mx-appswitcher-button-placeholder iframe,
-.mx-profilemenu-button-placeholder iframe {
-  width: 48px;
-  height: 48px;
-}
-
-/*
-* Mendix App Switcher Button
-*
-* 
-*/
-/*
-* Mendix Profile Menu Button
-*
-* 
-*/
 /* ==========================================================================
    Special styles for presenting Page Template Dashboard
 ========================================================================== */
