--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @media (max-width: 767px) {
   .mx-grid,
   .mx-tabcontainer,
