topbar variable connected to mobile header

--- a/styles/sass/custom/_custom-variables.scss
+++ b/styles/sass/custom/_custom-variables.scss
@@ -491,7 +491,7 @@ $callout-danger-bg:                     darken($brand-danger, 15%);
 // $m-header-height:                       44px;
 
 // Background Color
-$m-header-bg:                           $brand-primary;
+$m-header-bg:                           $topbar-bg;
 
 // Text Color
 $m-header-color:                        #000;
