--- a/styles/css/custom/custom.css
+++ b/styles/css/custom/custom.css
@@ -596,6 +596,25 @@ textarea.form-control {
 }
 
 /* ==========================================================================
+   Tab Container Mobile
+
+   Default Mendix Tab Container Widget rendered for mobile use
+========================================================================== */
+.tab-mobile.mx-tabcontainer .mx-tabcontainer-tabs {
+  border-color: transparent;
+  background-color: rgba(0, 0, 0, 0.38);
+}
+.tab-mobile.mx-tabcontainer .mx-tabcontainer-tabs li a {
+  color: #FFF;
+}
+.tab-mobile.mx-tabcontainer .mx-tabcontainer-tabs li a:hover, .tab-mobile.mx-tabcontainer .mx-tabcontainer-tabs li a:focus {
+  color: #ffcb00 !important;
+}
+.tab-mobile.mx-tabcontainer .mx-tabcontainer-tabs li.active a {
+  color: #ffcb00;
+}
+
+/* ==========================================================================
    Tables
 
    Default Mendix Table Widget. Tables can be used to lend structure to a page. They contain a number of rows (tr) and columns, the intersection of which is called a cell (td). Each cell can contain widgets
@@ -803,6 +822,10 @@ h1, h2, h3, h4, h5, h6,
   /* Reset Search Button - default hidden */
   /* Search Field */
 }
+.profile-phone .mx-listview .mx-listview-searchbar .mx-listview-search-input input,
+.profile-tablet .mx-listview .mx-listview-searchbar .mx-listview-search-input input {
+  background-color: rgba(115, 115, 115, 0.54);
+}
 
 /*
 * Mendix Documentation
@@ -817,35 +840,11 @@ body[dir="ltr"] .mx-header {
   background-color: #FFCB00;
 }
 
-/*
-* Mendix Documentation
-* Special styles for presenting mobile components
-*/
-/*
-* Tabcontainer
-*
-* Default Mendix Tabcontainer for Mobile
-*/
-.profile-phone .mx-tabcontainer-tabs,
-.profile-tablet .mx-tabcontainer-tabs {
-  border-color: transparent;
-  background-color: rgba(0, 0, 0, 0.38);
-}
-.profile-phone .mx-tabcontainer-tabs li a,
-.profile-tablet .mx-tabcontainer-tabs li a {
-  color: #FFF;
-}
-.profile-phone .mx-tabcontainer-tabs li a:hover, .profile-phone .mx-tabcontainer-tabs li a:focus, .profile-phone .mx-tabcontainer-tabs li a.active,
-.profile-tablet .mx-tabcontainer-tabs li a:hover,
-.profile-tablet .mx-tabcontainer-tabs li a:focus,
-.profile-tablet .mx-tabcontainer-tabs li a.active {
-  color: #ffcb00 !important;
-}
-.profile-phone .mx-tabcontainer-tabs li.active a,
-.profile-tablet .mx-tabcontainer-tabs li.active a {
-  color: #ffcb00;
-}
+/* ==========================================================================
+   Tabcontainer
 
+   Default Mendix Tabcontainer for Mobile 
+========================================================================== */
 /* ==========================================================================
    Special styles for presenting Page Template Dashboard
 ========================================================================== */
