--- a/styles/sass/custom/components/_tabcontainer.scss
+++ b/styles/sass/custom/components/_tabcontainer.scss
@@ -128,3 +128,41 @@
 		background-color: rgba(45, 45, 45, 0.36);
 	}
 }
+
+
+/* ==========================================================================
+   Tab Container Mobile
+
+   Default Mendix Tab Container Widget rendered for mobile use
+========================================================================== */
+.tab-mobile.mx-tabcontainer {
+    .mx-tabcontainer-tabs {
+        border-color: transparent;
+        background-color: rgba(0, 0, 0, 0.38);
+
+        li {
+
+            a {
+                color: #FFF;
+                &:hover,
+                &:focus {
+                    color: $brand-primary !important;
+                }
+            }
+
+            &.active a {
+                color: $brand-primary;
+                &:after,
+                &:before {
+                    
+                }
+                &:after {
+                    
+                }
+                &:before {
+                    
+                }
+            }
+        }
+    }
+}
