--- a/styles/sass/custom/pagetemplates/responsive/_page-dashboard.scss
+++ b/styles/sass/custom/pagetemplates/responsive/_page-dashboard.scss
@@ -18,11 +18,6 @@
 }
 .page-dashboard-actions {
 	.card {
-		 .btn-primary {
-			margin-top: -100px;
-		}
-		.btn-default {
-			margin-top: -100px;
-		}
+		/* Styles Here */
 	}
 }
